; ModuleID = '/home/carl/AnghaBench/GloVe/src/extr_cooccur.c_bitwisehash.c'
source_filename = "/home/carl/AnghaBench/GloVe/src/extr_cooccur.c_bitwisehash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bitwisehash(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  store i32 %9, i32* %8, align 4
  br label %10

10:                                               ; preds = %26, %3
  %11 = load i8*, i8** %4, align 8
  %12 = load i8, i8* %11, align 1
  store i8 %12, i8* %7, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %29

15:                                               ; preds = %10
  %16 = load i32, i32* %8, align 4
  %17 = shl i32 %16, 5
  %18 = load i8, i8* %7, align 1
  %19 = sext i8 %18 to i32
  %20 = add i32 %17, %19
  %21 = load i32, i32* %8, align 4
  %22 = lshr i32 %21, 2
  %23 = add i32 %20, %22
  %24 = load i32, i32* %8, align 4
  %25 = xor i32 %24, %23
  store i32 %25, i32* %8, align 4
  br label %26

26:                                               ; preds = %15
  %27 = load i8*, i8** %4, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 1
  store i8* %28, i8** %4, align 8
  br label %10

29:                                               ; preds = %10
  %30 = load i32, i32* %8, align 4
  %31 = and i32 %30, 2147483647
  %32 = load i32, i32* %5, align 4
  %33 = urem i32 %31, %32
  ret i32 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
